hphp/hack/test/typecheck/variadics/ellipsis_lambda.php.exp
ERROR: File "ellipsis_lambda.php", line 4, characters 12-12:
An expression is expected here. (Parsing[1002])
ERROR: File "ellipsis_lambda.php", line 4, characters 9-11:
Unbound name: `...` (a global constant) (Naming[2049])
ERROR: File "ellipsis_lambda.php", line 4, characters 14-16:
Unbound name: `==>` (a global constant) (Naming[2049])
ERROR: File "ellipsis_lambda.php", line 4, characters 9-11:
Unbound global constant (Typing) (Typing[4106])
ERROR: File "ellipsis_lambda.php", line 4, characters 14-16:
Unbound global constant (Typing) (Typing[4106])
